--- a/Individual Project.ipynb
+++ b/Individual Project.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question: How much information do I lose when I predict anemia using variables that are easier to measure and less invasive with respect to predictions based on blood tests?"
+    "Question: How much perfomance in prediction do I lose when I predict anemia using variables that are easier to measure and less invasive with respect to predictions based on blood tests?"
    ]
   },
   {
